--- a/32-jdbc-autoconfig/src/main/resources/application.properties
+++ b/32-jdbc-autoconfig/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 # TO-DO-07: Uncomment this line so we can see what Spring Boot is
 #           doing internally
-# debug=true
-
+debug=true
 rewards.recipient.name=John Doe
 rewards.recipient.age=10
 rewards.recipient.gender=Male
 rewards.recipient.hobby=Tennis
-
 # Logging control
 logging.level.root=ERROR
-
 # TO-DO-12: Change logging level of 'config' package below to DEBUG
 # - Rerun the 'RewardNetworkTests' test.
 # - Do you see your datasource debug logging message?
@@ -17,6 +14,6 @@ logging.level.root=ERROR
 #   (Search for "Exclusions" section in the log.)
 #
 logging.level.rewards=INFO
-logging.level.config=INFO
+logging.level.config=debug
 
 
